# mintly

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postAttach.sh
anchor/: .gitignore  Anchor.toml  README-tips.md  package-lock.json  package.json
anchor/programs/nft_lotery_no_code/: Cargo.toml
anchor/programs/nft_lotery_no_code/src/: constants.rs  error.rs  lib.rs
anchor/programs/nft_lotery_no_code/src/instructions/: create_collection_v1.rs  create_nft_v1.rs  get_random_ticket_number.rs  initialize_jackpot_vault.rs  mod.rs  withdraw_jackpot.rs
anchor/tests/: nft_lotery_no_code.ts
web/: next.config.js  tsconfig.json
web/app/: layout.tsx
web/app/ai/: page.tsx
web/app/collection/: page.tsx
web/app/nft/: page.tsx
web/components/ai/: ai-feature.tsx
web/components/collection/: collection-feature.tsx  collection-utils.tsx
web/components/dashboard/: dashboard-feature.tsx
web/components/idl/: idl.ts  nft_lotery_no_code.json  nft_lotery_no_code.ts
web/components/nft/: nft-feature.tsx  nft-form.tsx  pin-file-to-IPFS.tsx
web/components/solana/: solana-provider.tsx
web/components/ui/: ui-layout.tsx
