[package]
name = "nft_lotery_no_code"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_lotery_no_code"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
mpl-core = { version = "0.6.1", features = ["anchor"] }
borsh = "0.10.3"
num-traits = "0.2.18"
num-derive = "0.4.2"
rand_chacha = "0.3"
